# clp

./: Taskfile.yml
components/clp-package-utils/clp_package_utils/scripts/: search.py  start_clp.py  stop_clp.py
components/clp-package-utils/clp_package_utils/scripts/native/: search.py
components/clp-py-utils/clp_py_utils/: clp_config.py
components/core/: CMakeLists.txt
components/core/cmake/Options/: options.cmake
components/core/src/clp/: CMakeLists.txt  DictionaryConcepts.hpp  EncodedVariableInterpreter.cpp  EncodedVariableInterpreter.hpp  Grep.cpp  Grep.hpp  GrepCore.cpp  GrepCore.hpp  LogTypeDictionaryEntry.cpp  LogTypeDictionaryEntry.hpp  MessageParser.cpp  Query.cpp  Query.hpp  QueryToken.cpp  QueryToken.hpp
components/core/src/clp/aws/: AwsAuthenticationSigner.cpp  AwsAuthenticationSigner.hpp
components/core/src/clp/clg/: CMakeLists.txt  clg.cpp
components/core/src/clp/clo/: CMakeLists.txt  OutputHandler.cpp  clo.cpp
components/core/src/clp/clp/: CMakeLists.txt
components/core/src/clp/ffi/ir_stream/: Deserializer.hpp  IrUnitHandlerInterface.hpp  ir_search_methods.cpp  ir_search_methods.hpp  ir_unit_deserialization_methods.cpp  ir_unit_deserialization_methods.hpp
components/core/src/clp/streaming_compression/zstd/: Decompressor.cpp
components/core/src/clp_s/: ArchiveReader.cpp  ArchiveReader.hpp  ArchiveReaderAdaptor.cpp  ArchiveReaderAdaptor.hpp  ArchiveWriter.cpp  ArchiveWriter.hpp  CMakeLists.txt  ColumnReader.cpp  ColumnReader.hpp  ColumnWriter.cpp  ColumnWriter.hpp  CommandLineArguments.cpp  CommandLineArguments.hpp  Defs.hpp  DictionaryReader.hpp  DictionaryWriter.cpp  DictionaryWriter.hpp  InputConfig.cpp  InputConfig.hpp  JsonConstructor.cpp  JsonConstructor.hpp  JsonParser.cpp  JsonParser.hpp  ParsedMessage.hpp  ReaderUtils.cpp  ReaderUtils.hpp  Schema.cpp  Schema.hpp  SchemaMap.hpp  SchemaReader.cpp  SchemaTree.cpp  SchemaTree.hpp  SchemaWriter.cpp  SingleFileArchiveDefs.hpp  TableReader.cpp  TableReader.hpp  TimestampDictionaryWriter.cpp  TimestampDictionaryWriter.hpp  TimestampEntry.cpp  TimestampEntry.hpp  (+8 more)
components/core/src/clp_s/indexer/: CMakeLists.txt  IndexManager.cpp
components/core/src/clp_s/log_converter/: log_converter.cpp
components/core/src/clp_s/search/: CMakeLists.txt  Output.cpp  Output.hpp  OutputHandler.cpp  OutputHandler.hpp  QueryRunner.cpp  QueryRunner.hpp
components/core/src/clp_s/search/ast/: CMakeLists.txt  DateLiteral.cpp  DateLiteral.hpp
components/core/src/clp_s/timestamp_parser/: TimestampParser.cpp  TimestampParser.hpp
components/core/src/glt/: MessageParser.cpp
components/core/src/reducer/: ReducerNetworkUtils.cpp  ReducerNetworkUtils.hpp  ServerContext.cpp
components/core/tests/: test-Grep.cpp  test-clp_s-search.cpp  test-ffi_IrUnitHandlerInterface.cpp  test-ir_encoding_methods.cpp
components/core/tools/docker-images/clp-env-base-ubuntu-focal/: build.sh
components/core/tools/scripts/lib_install/: install-boost.sh  mongocxx.sh  spdlog.sh
components/core/tools/scripts/lib_install/ubuntu-jammy/: install-packages-from-source.sh  install-prebuilt-packages.sh
components/job-orchestration/job_orchestration/executor/search/: fs_search_task.py
components/job-orchestration/job_orchestration/scheduler/: job_config.py  scheduler_data.py
components/job-orchestration/job_orchestration/scheduler/query/: query_scheduler.py
components/job-orchestration/job_orchestration/scheduler/search/: search_scheduler.py
components/package-template/src/etc/: clp-config.yml
docs/src/dev-guide/design-clp-structured/: single-file-archive-format.md
taskfiles/: lint.yaml
